# three-gen-subnet

./: .gitignore  Dockerfile  LICENSE_GSPLAT.md  Makefile  OTHER_LICENSES  README.md  SN17 (three-gen).ipynb  demo.ipynb  ecosystem.config.json  entrypoint.sh  git_pull.sh  requirements.txt  setup-validator.sh  setup.py  start-validator.sh  update_validator.sh
docs/: public_api.md  running_validator.md
judge-service/: README.md  cleanup_env.sh  conda_env_judge.yml  conda_env_vllm.yml  pyproject.toml  requirements.txt  serve.py  setup_env.sh
judge-service/application/: api.py  judge.py
neurons/: base_miner.py  base_validator.py  cleanup_env.sh  conda_env_neurons.yml  miner.py  mining.py  protocol.py  pyproject.toml  requirements.txt  serve_miner.py  serve_validator.py  setup_env.sh  update_env.sh  validating.py  validator.py  version.py
neurons/api/: __init__.py
neurons/auto_updater/: __init__.py
neurons/common/: __init__.py  miner_license_consent_declaration.py  owner.py  protocol.py  synapses.py  version.py
neurons/miner/: __init__.py  config.py  metagraph_sync.py  task_registry.py  validator_selector.py  workers.py
neurons/mining/: __init__.py  test.py
neurons/mocks/: check_storing.py  check_validation.py  check_versions.py  conda_env_mock_validator.yml  gateway_mock_client.py  mock_client.py  mock_generator.py  mock_metagraph.py  mock_miner.py  mock_miners.py  mock_validator.py  monkey.encoded.ply  monkey.h5  monkey.ply  run_validation.py  setup_mock_validator.sh
neurons/old/: base_validator.py  config.py  protocol.py  validating.py  validator.py
neurons/storage_subnet/: __init__.py  models.py  protocol.py
neurons/tests/: subtensor_mocks.py  test_validator.py
neurons/tests/resources/: prompts.txt  robocop with hammer in one hand.spz
neurons/tests/test_validator/: conftest.py  subtensor_mock.py  subtensor_mocks.py  test_duel_tasks.py  test_gateway_scorer.py  test_gateway_tasks.py  test_ranks.py  test_ratings.py  test_single_miner_rules.py  test_task_processing_rules.py  utils.py
neurons/validating/: test.py
neurons/validator/: __init__.py  config.py  dataset.py  fidelity_check.py  metagraph_sync.py  miner_data.py  miner_registry.py  prover.py  rate_limiter.py  storage.py  task_registry.py  telemetry.py  validation_service.py  validator.py  validator_state.py  version.py
neurons/validator/api/: __init__.py  api_key_manager.py  protocol.py  public_api_server.py  router.py  task_registry.py
neurons/validator/duels/: base_judge_service.py  data_structures.py  duels_task_storage.py  judge_service.py  organic_judge_service.py  ranks.py  rating_judge_service.py  ratings.py
neurons/validator/gateway/: gateway.py  gateway_api.py  gateway_manager.py  gateway_scorer.py
neurons/validator/gateway/http3_client/: connection_protocol.py  http3_client.py  http_request.py  url.py
neurons/validator/gateway/utils/: gateway_test_client.py
neurons/validator/task_manager/: task.py  task_manager.py  validator_task.py
neurons/validator/task_manager/task_storage/: base_task_storage.py  organic_task.py  organic_task_storage.py  synthetic_asset_storage.py  synthetic_prompt_service.py  synthetic_prompts_fetcher.py  synthetic_task_storage.py
validation/: GaussianSplattingRenderer.py  ValidationTextTo3DModel.py  cleanup_env.sh  conda_env_validation.yml  lint_check.sh  offline_test_runner.py  pyproject.toml  requirements.txt  serve.py  server_launcher_tool.py  setup_env.sh  setup_linux_env.sh  switch_to_uvicorn.sh  test.py  update_env.sh  validation_launcher.py
validation/ValidationLib/: CameraUtils.py  GaussianSplattingRenderer.py  ValidationTextTo3DModel.py
validation/application/: metrics.py
validation/benchmark/: README.md  benchmark.sh  benchmark_config.yml  benchmark_quality_test_tool.py  benchmark_reference.csv  benchmark_validation.py  benchmark_validation_test.py  dataset_preparation.py  execution_tree.py  execution_tree_visualizer.py
validation/benchmark/benchmark_utils/: benchmark_loader.py  benchmark_plotter.py  benchmark_runner.py
validation/engine/: data_structures.py  validation_engine.py
validation/engine/io/: base.py
validation/engine/io/ply/: __init__.py  loader.py
validation/engine/metrics/: alignment_scorer.py  quality_scorer.py  similarity_scorer.py
validation/engine/models/: aethtetic_model.py  quality_model.py
validation/engine/rendering/: renderer.py
validation/engine/rendering/gaussian_splatting/: gs_camera.py  gs_renderer.py  gs_utils.py
validation/engine/utils/: gs_data_checker_utils.py  model_compilation_utils.py  statistics_computation_utils.py
validation/extras/diff_gaussian_rasterization/diff_gaussian_rasterization/: __init__.py
validation/lib/: ValidationPipeline.py  gaussian_splatting_renderer.py  hdf5_loader.py  rendering_pipeline.py  spherical_harmonics.py  validation_pipeline.py  validators.py
validation/server/: app.py  pipeline.py
validation/tests/: local_test_runner.py  local_test_runner_conf.yml  offline_test_runner.py  remote_test_runner.py  test_gs_camera.py  test_gs_data_validity.py  test_gs_renderer.py  test_gsa_data_validity.py  test_image_vs_image_scorer.py  test_quality_scorer.py  test_renderer.py  test_rendering.py  test_runner_config.yml  test_text_vs_image_scorer.py  test_validation.py
validation/tests/resources/: hamburger.ply  monkey_pcl.h5
validation/validation/: gs_camera.py  gs_renderer.py  hdf5_loader.py  rendering_pipeline.py  utils.py  validation_pipeline.py
validation/validation/io/hdf5/: __init__.py  loader.py  writer.py
validation/validation/io/ply/: __init__.py  loader.py
validation/validation/rendering/: gs_camera.py  gs_renderer.py  rendering_pipeline.py
validation/validation_lib/: eval_sh.py  memory.py  utils.py
validation/validation_lib/io/: base.py
validation/validation_lib/rendering/: gs_camera.py  gs_renderer.py  rendering_pipeline.py
validation/validation_lib/validation/: base_validator.py  clip_based_model.py  clip_score_validator.py  combined_models_validator.py  laplacian_variance.py  metric_utils.py  validation_pipeline.py  vqascore_validator.py
(+104 files in other folders)
